--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <ul class="actions">
                 <li>
                   <a
-                    href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                    href="https://d-vac.github.io/Model-Site/."
                     class="button"
                     >Learn more</a
                   >
