--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <ul class="actions">
                 <li>
                   <a
-                    href="https://d-vac.github.io/Model-Site/."
+                    href="https://d-vac.github.io/Model-Site/index.html"
                     class="button"
                     >Learn more</a
                   >
